scripts/nullness/annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8.txt
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Dorm.java:39: error: [assignment] incompatible types in assignment.
            rooms[i]= new Room(this, i, femaleOnly);
                      ^
  found   : @UnderInitialization(edu.umw.cpsc.collegediversity.Room.class) @NonNull Room
  required: @Initialized @NonNull Room
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Dorm.java:39: error: [argument] incompatible argument for parameter dorm of Room constructor.
            rooms[i]= new Room(this, i, femaleOnly);
                               ^
  found   : @UnderInitialization(edu.umw.cpsc.collegediversity.Dorm.class) @NonNull Dorm
  required: @Initialized @NonNull Dorm
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:49: error: [return] incompatible types in return.
        return members.keys();
                           ^
  type of expression: Enumeration<@KeyFor("this.members") Student>
  method return type: Enumeration<Student>
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:92: error: [argument] incompatible argument for parameter key of Hashtable.remove.
            members.remove(s);
                           ^
  found   : @Initialized @Nullable Student
  required: @Initialized @NonNull Object
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:210: error: [dereference.of.nullable] dereference of possibly-null reference dormRoom
        Dorm d = dormRoom.getDorm();
                 ^
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:236: error: [argument] incompatible argument for parameter s2 of Student.encounter.
                    encounter(s);
                              ^
  found   : @Initialized @Nullable Student
  required: @Initialized @NonNull Student
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Sim.java:234: error: [dereference.of.nullable] dereference of possibly-null reference outputFiles
            for (int i=0; i<outputFiles.length; i++) {  
                            ^
7 errors
